<resources>
    <string name="app_name">MyQQ</string>
    <string name="login_button">登录</string>>
    <string name="student_num">学号</string>
    <string name="password">密码</string>
    <string name="verifying">验证中</string>
    <string name="search">搜索</string>
    <string name="tab_chat">消息</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_set">设置</string>
    <string name="ninety_nine_plus">99+</string>
    <string name="connection_error">连接错误</string>
    <string name="friend_offline">好友不在线</string>
    <string name="online">[在线]</string>
    <string name="offline">[离线]</string>
    <string name="action_settings">Settings</string>
    <string name="voice_up_tips">手指上滑,取消发送</string>
    <string name="longclick_speak">长按说话</string>
    <string name="picture">照片</string>
    <string name="camera">拍摄</string>
    <string name="location">位置</string>
    <string name="file">文件</string>
    <string name="add_avator">头像</string>
    <string name="new_message">新消息</string>
    <string name="server_on">服务器启动</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="test_send">佳佳我爱你</string>
    <string name="test_receive">亮亮我爱你</string>
    <string name="copyright">Copyright©2018, Zhao Wenliang</string>
    <string name="Ok">确定</string>
    <string name="Cancel">取消</string>
    <string name="wrong_stunum">学号错误</string>
    <string name="contact_exist">联系人已存在</string>
    <string name="add_myself_error">不能添加自己</string>
    <string name="clear_contacts">清空联系人</string>
    <string name="clear_chats">清空聊天记录</string>
    <string name="never_signup">用户未注册</string>

    <string name="default_path">/johnwilliams/qq/</string>
    <string name="record_path">recording/</string>
    <string name="image_path">image/</string>
    <string name="file_path">file/</string>

    <string name="no_sdcard">没有SD卡</string>
    <string name="voice_cancel_tips">松开手指，取消发送</string>
    <string name="too_short">录音时间过短</string>
    <string name="create_group">发起群聊</string>
    <string name="input_group_name">请输入群聊名称</string>
    <string name="create_now">立即创建</string>
    <string name="group_name_cant_empty">群聊名称不能为空</string>
    <string name="create_group_successfully">成功创建群聊</string>
    <string name="tag_groupchat">[群聊]</string>
    <string name="test_stunum">2016011452</string>
    <string name="no_chatting_self">不能与自己聊天</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
