<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ChatActivity">

    <!--Tool Bar-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="6dp"
            android:layout_marginEnd="76dp"
            android:paddingBottom="6dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="佳佳"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/toolbar_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/online"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:id="@+id/online" />

        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <!--ChatMessage List-->
    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0"
        android:background="@color/msg_chat_bg" >

        <com.johnwilliams.qq.lib.XListView.XListView
            android:id="@+id/mListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@null"
            android:fadingEdgeLength="0dp"
            android:fastScrollEnabled="true"
            android:listSelector="@android:color/transparent"
            android:paddingBottom="10dp"
            android:transcriptMode="normal" />

        <RelativeLayout
            android:id="@+id/layout_record"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:background="@drawable/chat_top_voice_bg"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/iv_record"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/action_settings"
                android:src="@drawable/chat_icon_voice1" />

            <TextView
                android:id="@+id/tv_voice_tips"
                style="@style/QQ.TextView._White"
                android:layout_below="@id/iv_record"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/voice_up_tips"
                android:textSize="14sp" />
        </RelativeLayout>
    </FrameLayout>

    <include layout="@layout/include_chat_bottom_bar" />

</LinearLayout>