<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_1"
            android:layout_alignParentTop="true"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:paddingBottom="5.0dip"
            android:paddingTop="5.0dip"
            >

            <ImageView
                android:id="@+id/contact_profile"
                style="@style/QQ.ImageView.Photo_Middle"
                android:layout_gravity="center_vertical"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/github" />

            <TextView
                android:id="@+id/contact_name"
                android:text="佳"
                android:layout_width="wrap_content"
                android:layout_height="25.0dip"
                android:layout_marginStart="10.0dip"
                android:layout_marginEnd="58.0dip"
                style="@style/QQ.TextView._Black"
                android:layout_toEndOf="@id/contact_profile"
                android:ellipsize="end"
                android:gravity="start|center"
                android:singleLine="true"
                android:textColor="@drawable/recent_name_text_color_selector"
                />

            <TextView
                android:id="@+id/online_state"
                android:layout_width="fill_parent"
                android:layout_height="35.0dip"
                android:layout_below="@id/contact_name"
                android:layout_toEndOf="@id/contact_profile"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="35.0dip"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingLeft="6.0dip"
                android:paddingRight="6.0dip"
                android:singleLine="true"
                android:textColor="@drawable/recent_message_text_color_selector"
                android:textSize="15.0sp"
                android:text="@string/online"/>

        </RelativeLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_line_width_1"
            android:background="@drawable/base_horizontal_line" >
        </View>

        <Button
            android:id="@+id/btn_clear_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/clear_chats"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear_contacts" />

        <Button
            android:id="@+id/btn_clear_contacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimary"
            android:text="@string/clear_contacts"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>